<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guest.madlibs.FormActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/relative"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input1"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/adjective"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input2"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/adjective"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input3"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/adjective"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input4"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/person"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input5"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/adjective"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input6"
                android:layout_gravity="center_horizontal"
                android:hint=""/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/adjective"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input7"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/verbed"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input8"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bodyPart"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input9"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/verbing"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input10"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nouns"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input11"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/noun"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input12"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/adverb"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input13"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/verb"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input14"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/verb"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input15"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/relative"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input16"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/person"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input17"
                android:layout_gravity="center_horizontal"
                android:hint=""/>

            <Button
                android:id="@+id/btn_makeMadLib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make"
                android:layout_marginTop="59dp"
                android:layout_gravity="center_horizontal">
            </Button>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
